--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=cre, initial-scale=1.0">
-   <title>Document</title>
+   <title>Prueba 2
+   </title>
 </head>
 <body>
    
